fixed project sizing on smaller screens

--- a/frontend/src/styles/Projects.css
+++ b/frontend/src/styles/Projects.css
@@ -88,7 +88,7 @@
 }
 
 .box-shadow-proj-overlay {
-  @apply border-transparent rounded-[20px] transform w-[70%] text-center relative shadow-lg md:flex xl:flex p-10 gap-10;
+  @apply border-transparent rounded-[20px] transform w-[95%] md:w-[70%] xl:w-[70%] mt-10 md:mt-0 xl:mt-0 text-center relative shadow-lg md:flex xl:flex p-10 gap-10;
   box-shadow: -6px -6px 12px rgba(255, 255, 255, 0.1),
     6px 6px 12px rgba(255, 255, 255, 0.1);
   background: var(--background-color-1);
